--- a/index.html
+++ b/index.html
@@ -130,14 +130,14 @@ body {
 </head>
 <body>
 <div style="position: absolute; top: 10px; right: 12px; z-index: 1001;">
-<button data-action="toggleTheme" id="themeToggle" style="font-size: 22px; background: none; border: none; cursor: pointer;">🌗</button>
+<button id="themeToggle" onclick="toggleTheme()" style="font-size: 22px; background: none; border: none; cursor: pointer;">🌗</button>
 </div>
 <div class="tab-panel">
-<button class="tab-button" data-tab="gameContainer">🦈 Игра</button>
-<button class="tab-button" data-tab="boosterContainer">⚡ Бустеры</button>
-<button class="tab-button" data-tab="shopContainer">🛒 Магазин</button>
-<button class="tab-button" data-tab="profileContainer">👤 Профиль</button>
-<button class="tab-button" data-action="openLeaderboard">🏆 Топ</button>
+<button class="tab-button" onclick="toggleTab('gameContainer')">🦈 Игра</button>
+<button class="tab-button" onclick="toggleTab('boosterContainer')">⚡ Бустеры</button>
+<button class="tab-button" onclick="toggleTab('shopContainer')">🛒 Магазин</button>
+<button class="tab-button" onclick="toggleTab('profileContainer')">👤 Профиль</button>
+<button class="tab-button" onclick="openLeaderboard()">🏆 Топ</button>
 </div>
 <div class="balance" id="tokenCount">0 tokens</div>
 <div class="game-container" id="gameContainer" style="display:flex; flex-direction:column; align-items:center; width:100%; margin-top:20px;">
@@ -145,15 +145,15 @@ body {
 </div>
 <div class="game-container" id="boosterContainer">
 <h2>Boosters</h2>
-<button data-action="buyBooster(50, 1">Auto-Tap +1 (50)</button>
-<button data-action="buyBooster(100, 2">Auto-Tap +2 (100)</button>
-<button data-action="buyBooster(1000, 3">Auto-Tap +3 (1000)</button>
+<button onclick="buyBooster(50, 1)">Auto-Tap +1 (50)</button>
+<button onclick="buyBooster(100, 2)">Auto-Tap +2 (100)</button>
+<button onclick="buyBooster(1000, 3)">Auto-Tap +3 (1000)</button>
 </div>
 <div class="game-container" id="shopContainer">
 <h2>Skins</h2>
-<button data-action="buySkin('default', 0">Default (Free)</button>
-<button data-action="buySkin('gold', 1000">Gold (1000)</button>
-<button data-action="buySkin('leopard', 500">Leopard (500)</button>
+<button onclick="buySkin('default', 0)">Default (Free)</button>
+<button onclick="buySkin('gold', 1000)">Gold (1000)</button>
+<button onclick="buySkin('leopard', 500)">Leopard (500)</button>
 </div>
 <div class="game-container" id="profileContainer">
 <h2>Профиль</h2>
@@ -166,7 +166,7 @@ body {
 <div id="leaderboard-modal" style="display:none;position:fixed;top:0;left:0;width:100%;height:100%;background:rgba(255,255,255,0.95);z-index:1000;flex-direction:column;align-items:center;justify-content:center;">
 <h2>🏆 Топ игроков</h2>
 <ul id="leaderboardList"></ul>
-<button data-action="document.getElementById('leaderboard-modal').style.display='none'">Закрыть</button>
+<button onclick="document.getElementById('leaderboard-modal').style.display='none'">Закрыть</button>
 </div>
 <script>
 const dbUrl = "https://tralalero-fec07-default-rtdb.firebaseio.com";
@@ -345,70 +345,157 @@ function triggerVibration(ms = 30) {
 
 </script>
 <script>
-function toggleTheme() {
-  const body = document.body;
-  const current = body.classList.contains("dark-theme") ? "dark" : "light";
-  const next = current === "dark" ? "light" : "dark";
-  body.classList.remove(current + "-theme");
-  body.classList.add(next + "-theme");
-  localStorage.setItem("theme", next);
-  document.getElementById("themeToggle").textContent = next === "dark" ? "☀️" : "🌙";
-}
-
-(function applyStoredTheme() {
-  const stored = localStorage.getItem("theme") || "light";
-  document.body.classList.add(stored + "-theme");
-  const icon = stored === "dark" ? "☀️" : "🌙";
-  window.addEventListener("DOMContentLoaded", () => {
-    const btn = document.getElementById("themeToggle");
-    if (btn) btn.textContent = icon;
-  });
-})();
-
-
-function triggerVibration(ms = 30) {
-  try {
-    if (Telegram && Telegram.WebApp && Telegram.WebApp.HapticFeedback) {
-      Telegram.WebApp.HapticFeedback.impactOccurred('light');
-    }
-    if (navigator.vibrate) navigator.vibrate(ms);
-  try {
-    if (window.navigator && navigator.vibrate) {
-      navigator.vibrate(ms);
-    } else if (Telegram && Telegram.WebApp && Telegram.WebApp.HapticFeedback) {
-      Telegram.WebApp.HapticFeedback.impactOccurred('light');
-    }
-  } catch (e) {
-    console.warn("Vibration failed:", e);
-  }
-}
-
-
-
-// === GLOBAL FUNCTION BINDINGS ===
-window.toggleTab = toggleTab;
-window.handleTap = handleTap;
-window.buyBooster = buyBooster;
-window.buySkin = buySkin;
-window.openLeaderboard = openLeaderboard;
-window.toggleTheme = toggleTheme;
-
 document.addEventListener("DOMContentLoaded", () => {
-  // обычные действия
+  const dbUrl = "https://tralalero-fec07-default-rtdb.firebaseio.com";
+  let userId = null;
+  let balance = 0, autoTap = 0, level = 1, xp = 0;
+  let ownedSkins = { default: true };
+  let currentSkin = 'default';
+  let userFirstName = '', userAvatar = '', joinDate = '';
+
+  const tokenCount = document.getElementById("tokenCount");
+  const tapImage = document.getElementById("tapImage");
+
+  function updateBalanceDisplay() {
+    tokenCount.textContent = `${balance} tokens`;
+    const t = document.getElementById("profileTokens");
+    if (t) t.textContent = `Токенов: ${balance}`;
+  }
+
+  function updateProfileInfo() {
+    const n = document.getElementById("profileName");
+    const a = document.getElementById("profileAvatar");
+    const j = document.getElementById("profileJoin");
+    const l = document.getElementById("profileLevel");
+    if (n) n.textContent = userFirstName;
+    if (a) a.src = userAvatar;
+    if (j) j.textContent = `Дата регистрации: ${joinDate}`;
+    if (l) l.textContent = `Уровень: ${level}`;
+  }
+
+  function handleTap() {
+    balance++;
+    updateBalanceDisplay();
+    tapImage.classList.add("tap-animation");
+    setTimeout(() => tapImage.classList.remove("tap-animation"), 200);
+    triggerVibration(30);
+    saveProgress();
+  }
+
+  function saveProgress() {
+    if (!userId) return;
+    fetch(`${dbUrl}/users/${userId}.json`, {
+      method: "PUT",
+      headers: { "Content-Type": "application/json" },
+      body: JSON.stringify({ balance, currentSkin, first_name: userFirstName, photo_url: userAvatar, joinDate })
+    });
+  }
+
+  function loadProgress() {
+    if (!userId) return;
+    fetch(`${dbUrl}/users/${userId}.json`)
+      .then(res => res.json())
+      .then(data => {
+        if (data) {
+          balance = data.balance || 0;
+          currentSkin = data.currentSkin || 'default';
+          userFirstName = data.first_name || 'Игрок';
+          userAvatar = data.photo_url || '';
+          joinDate = data.joinDate || new Date().toISOString().split('T')[0];
+          updateBalanceDisplay();
+          updateSkin(currentSkin);
+          updateProfileInfo();
+        }
+      });
+  }
+
+  function toggleTab(id) {
+    ['gameContainer', 'shopContainer', 'boosterContainer', 'profileContainer'].forEach(el => {
+      const element = document.getElementById(el);
+      if (element) element.style.display = 'none';
+    });
+    const selected = document.getElementById(id);
+    if (selected) selected.style.display = 'flex';
+  }
+
+  function buyBooster(cost, power) {
+    if (balance >= cost) {
+      balance -= cost;
+      autoTap += power;
+      updateBalanceDisplay();
+      saveProgress();
+    }
+  }
+
+  function buySkin(skin, cost) {
+    if (ownedSkins[skin] || balance >= cost) {
+      if (!ownedSkins[skin]) {
+        balance -= cost;
+        ownedSkins[skin] = true;
+      }
+      currentSkin = skin;
+      updateSkin(skin);
+      updateBalanceDisplay();
+      saveProgress();
+    }
+  }
+
+  function updateSkin(skin) {
+    if (!tapImage) return;
+    if (skin === 'gold') tapImage.src = 'shark_skin1.png';
+    else if (skin === 'leopard') tapImage.src = 'shark_skin2.png';
+    else tapImage.src = 'shark.png';
+  }
+
+  function openLeaderboard() {
+    const modal = document.getElementById('leaderboard-modal');
+    if (modal) modal.style.display = 'flex';
+    fetch(`${dbUrl}/users.json`)
+      .then(res => res.json())
+      .then(data => {
+        const leaderboard = document.getElementById('leaderboardList');
+        if (!leaderboard) return;
+        leaderboard.innerHTML = '';
+        const users = Object.entries(data || {}).map(([id, info]) => ({ id, ...info }))
+          .sort((a, b) => b.balance - a.balance).slice(0, 10);
+        users.forEach(user => {
+          const name = user.first_name || `ID ${user.id?.slice(-4)}`;
+          const photo = user.photo_url || 'https://via.placeholder.com/24';
+          const li = document.createElement('li');
+          li.innerHTML = `<img src="${photo}" style="width:24px;height:24px;border-radius:50%;margin-right:6px;" /><strong>${name}</strong>: ${user.balance}`;
+          leaderboard.appendChild(li);
+        });
+      });
+  }
+
+  function triggerVibration(ms = 30) {
+    try {
+      if (Telegram?.WebApp?.HapticFeedback) Telegram.WebApp.HapticFeedback.impactOccurred('light');
+      if (navigator.vibrate) navigator.vibrate(ms);
+    } catch (e) { console.warn("vibration error", e); }
+  }
+
+  function toggleTheme() {
+    const body = document.body;
+    const current = body.classList.contains("dark-theme") ? "dark" : "light";
+    const next = current === "dark" ? "light" : "dark";
+    body.classList.remove(current + "-theme");
+    body.classList.add(next + "-theme");
+    localStorage.setItem("theme", next);
+    document.getElementById("themeToggle").textContent = next === "dark" ? "☀️" : "🌙";
+  }
+
   document.querySelectorAll("button[data-action]").forEach(btn => {
     const action = btn.getAttribute("data-action");
     if (typeof window[action] === "function") {
       btn.addEventListener("click", () => window[action]());
     }
   });
-
-  // вкладки по data-tab
   document.querySelectorAll("button[data-tab]").forEach(btn => {
     const tab = btn.getAttribute("data-tab");
     btn.addEventListener("click", () => toggleTab(tab));
   });
 
-  // Telegram init
   if (typeof Telegram !== 'undefined' && Telegram.WebApp) {
     Telegram.WebApp.ready();
     Telegram.WebApp.expand();
